--- a/vignettes/match_weight_02_application.Rmd
+++ b/vignettes/match_weight_02_application.Rmd
@@ -4,7 +4,7 @@ bibliography: references.bib
 author: 
   - Manoj Khanal <khanal_manoj@lilly.com>
   - Eli Lilly & Company
-date: "2024-04-09"
+date: "2024-04-12"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{2. Matching and Weighting Application with Dynamic Borrowing}
@@ -192,32 +192,32 @@ The first six observations of the data set is shown below.
 
 ```r
 head(data_with_weights)
-#>           Age   Weight   Height Biomarker1 Biomarker2 Smoker Sex ECOG1 group
-#> [1,] 55.51419 148.5092 65.63899   33.71898   55.26178      0   1     0     1
-#> [2,] 49.93326 146.9441 63.44883   35.65828   45.50928      1   1     1     1
-#> [3,] 58.51588 153.5435 70.53193   35.53710   55.89283      0   1     0     0
-#> [4,] 48.61226 147.2873 64.10615   31.17663   55.80523      0   1     0     1
-#> [5,] 51.84943 151.0312 62.16361   33.99677   48.01981      0   1     0     0
-#> [6,] 51.81743 148.1115 68.69766   33.82398   47.32652      1   1     0     0
+#>      X      Age   Weight   Height Biomarker1 Biomarker2 Smoker Sex ECOG1 group
+#> [1,] 1 56.63723 150.8678 65.79587   39.69306   47.71659      0   1     0     1
+#> [2,] 2 52.21456 145.0049 63.72807   29.83998   48.36954      1   1     1     1
+#> [3,] 3 53.46470 146.6449 63.73311   37.64033   48.64362      0   0     0     0
+#> [4,] 4 51.89528 147.6856 66.44799   41.08949   46.04826      1   1     1     1
+#> [5,] 5 52.17130 151.8084 66.16895   34.48727   51.26657      1   1     1     0
+#> [6,] 6 57.01979 144.6115 64.03365   34.82447   52.03498      0   1     0     0
 #>           time event indicator ratio1_caliper_weights_lps
-#> [1,] 0.4089043     0         1                          0
-#> [2,] 0.9721405     0         1                          1
-#> [3,] 0.2956919     0         1                          0
-#> [4,] 4.3111823     0         1                          0
+#> [1,] 0.4089043     0         1                          1
+#> [2,] 0.9721405     0         1                          0
+#> [3,] 0.2956919     0         1                          1
+#> [4,] 4.3111823     0         1                          1
 #> [5,] 0.2644848     0         1                          0
-#> [6,] 0.3103544     0         1                          0
+#> [6,] 0.3103544     0         1                          1
 #>      ratio1_caliper_weights genetic_ratio1_weights
-#> [1,]                      0                      1
-#> [2,]                      1                      1
-#> [3,]                      0                      1
+#> [1,]                      1                      1
+#> [2,]                      0                      1
+#> [3,]                      1                      1
 #> [4,]                      1                      1
 #> [5,]                      0                      1
 #> [6,]                      0                      1
 #>      genetic_ratio1_weights_no_replace optimal_ratio1_weights weights_gbm
-#> [1,]                                 1                      0           1
-#> [2,]                                 0                      1           1
-#> [3,]                                 1                      0           1
-#> [4,]                                 1                      0           1
+#> [1,]                                 0                      1           1
+#> [2,]                                 1                      1           1
+#> [3,]                                 0                      1           1
+#> [4,]                                 0                      1           1
 #> [5,]                                 1                      1           1
 #> [6,]                                 1                      1           1
 #>      eb_weights invprob_weights cnsr ext norm.weights
@@ -335,14 +335,13 @@ results.exp.psborrow<- mcmc_sample(anls_obj,
 )
 #> Running MCMC with 3 sequential chains...
 #> 
-#> Chain 1 finished in 11.5 seconds.
-#> Chain 2 finished in 13.0 seconds.
-#> Chain 3 finished in 13.1 seconds.
+#> Chain 1 finished in 12.1 seconds.
+#> Chain 2 finished in 12.8 seconds.
+#> Chain 3 finished in 10.9 seconds.
 #> 
 #> All 3 chains finished successfully.
-#> Mean chain execution time: 12.5 seconds.
-#> Total execution time: 38.0 seconds.
-
+#> Mean chain execution time: 11.9 seconds.
+#> Total execution time: 36.1 seconds.
 
 draws1 <- results.exp.psborrow$draws()
 draws1 <- rename_draws_covariates(draws1, anls_obj)
@@ -353,14 +352,14 @@ The summary is shown below.
 ```r
 results.exp.psborrow$summary()
 #> # A tibble: 6 × 10
-#>   variable      mean    median     sd    mad          q5      q95  rhat ess_bulk
-#>   <chr>        <dbl>     <dbl>  <dbl>  <dbl>       <dbl>    <dbl> <dbl>    <dbl>
-#> 1 lp__     -709.     -709.     1.50   1.30   -712.       -707.     1.00   10252.
-#> 2 beta_trt   -0.0370   -0.0373 0.117  0.117    -0.230       0.157  1.00   12902.
-#> 3 tau         0.0838    0.0370 0.122  0.0506    0.000343    0.326  1.00   12113.
-#> 4 alpha[1]   -0.945    -0.943  0.0992 0.0996   -1.11       -0.784  1.00   12636.
-#> 5 alpha[2]    2.56      2.58   0.316  0.314     2.01        3.05   1.00   18595.
-#> 6 HR_trt      0.970     0.963  0.114  0.113     0.795       1.17   1.00   12902.
+#>   variable     mean    median     sd    mad          q5      q95  rhat ess_bulk
+#>   <chr>       <dbl>     <dbl>  <dbl>  <dbl>       <dbl>    <dbl> <dbl>    <dbl>
+#> 1 lp__     -718.    -718.     1.49   1.28   -721.       -716.     1.00   10631.
+#> 2 beta_trt   -0.359   -0.360  0.109  0.108    -0.536      -0.176  1.00   13963.
+#> 3 tau         0.120    0.0531 0.179  0.0723    0.000497    0.468  1.00   12567.
+#> 4 alpha[1]   -0.619   -0.618  0.0908 0.0904   -0.773      -0.475  1.00   13720.
+#> 5 alpha[2]    2.36     2.38   0.370  0.361     1.71        2.93   1.00   18458.
+#> 6 HR_trt      0.703    0.698  0.0773 0.0755    0.585       0.839  1.00   13963.
 #> # ℹ 1 more variable: ess_tail <dbl>
 ```
 
@@ -394,14 +393,14 @@ The $95\%$ credible interval can be calculated as follows.
 ```r
 summarize_draws(draws1, ~ quantile(.x, probs = c(0.025, 0.975)))
 #> # A tibble: 6 × 3
-#>   variable                                 `2.5%`  `97.5%`
-#>   <chr>                                     <dbl>    <dbl>
-#> 1 lp__                               -713.        -707.   
-#> 2 treatment log HR                     -0.266        0.195
-#> 3 commensurability parameter            0.0000886    0.428
-#> 4 baseline log hazard rate, internal   -1.14        -0.754
-#> 5 baseline log hazard rate, external    1.90         3.14 
-#> 6 treatment HR                          0.767        1.21
+#>   variable                                `2.5%`  `97.5%`
+#>   <chr>                                    <dbl>    <dbl>
+#> 1 lp__                               -722.       -716.   
+#> 2 treatment log HR                     -0.572      -0.141
+#> 3 commensurability parameter            0.000113    0.624
+#> 4 baseline log hazard rate, internal   -0.803      -0.448
+#> 5 baseline log hazard rate, external    1.56        3.02 
+#> 6 treatment HR                          0.565       0.869
 ```
 
 We can graph other plots that help us evaluate convergence and diagnose problems with the MCMC sampler, such as trace plot.
@@ -536,13 +535,13 @@ results.weib.psborrow<- mcmc_sample(anls_obj,
 )
 #> Running MCMC with 3 sequential chains...
 #> 
-#> Chain 1 finished in 29.2 seconds.
-#> Chain 2 finished in 33.2 seconds.
-#> Chain 3 finished in 29.7 seconds.
+#> Chain 1 finished in 26.0 seconds.
+#> Chain 2 finished in 26.6 seconds.
+#> Chain 3 finished in 29.2 seconds.
 #> 
 #> All 3 chains finished successfully.
-#> Mean chain execution time: 30.7 seconds.
-#> Total execution time: 92.5 seconds.
+#> Mean chain execution time: 27.3 seconds.
+#> Total execution time: 82.2 seconds.
 
 draws2 <- results.weib.psborrow$draws()
 draws2 <- rename_draws_covariates(draws2, anls_obj)
@@ -555,13 +554,13 @@ results.weib.psborrow$summary()
 #> # A tibble: 7 × 10
 #>   variable          mean   median     sd    mad       q5      q95  rhat ess_bulk
 #>   <chr>            <dbl>    <dbl>  <dbl>  <dbl>    <dbl>    <dbl> <dbl>    <dbl>
-#> 1 lp__          -6.96e+2 -6.96e+2 1.63   1.48   -6.99e+2 -694.     1.00   11832.
-#> 2 beta_trt      -2.84e-2 -2.87e-2 0.117  0.118  -2.20e-1    0.166  1.00   16067.
-#> 3 shape_weibull  8.19e-1  8.18e-1 0.0324 0.0324  7.67e-1    0.873  1.00   20840.
-#> 4 tau            1.23e-1  5.50e-2 0.179  0.0750  5.65e-4    0.474  1.00   15655.
-#> 5 alpha[1]      -7.76e-1 -7.75e-1 0.103  0.104  -9.49e-1   -0.611  1.00   16026.
-#> 6 alpha[2]       2.14e+0  2.15e+0 0.326  0.325   1.58e+0    2.65   1.00   21336.
-#> 7 HR_trt         9.79e-1  9.72e-1 0.116  0.115   8.03e-1    1.18   1.00   16067.
+#> 1 lp__          -708.    -7.07e+2 1.67   1.49   -7.11e+2 -706.     1.00   11161.
+#> 2 beta_trt        -0.304 -3.03e-1 0.111  0.112  -4.84e-1   -0.120  1.00   16356.
+#> 3 shape_weibull    0.836  8.36e-1 0.0322 0.0317  7.83e-1    0.889  1.00   21704.
+#> 4 tau              0.177  7.56e-2 0.281  0.104   6.44e-4    0.688  1.00   14385.
+#> 5 alpha[1]        -0.508 -5.07e-1 0.0931 0.0934 -6.63e-1   -0.357  1.00   16280.
+#> 6 alpha[2]         1.97   1.99e+0 0.380  0.373   1.32e+0    2.56   1.00   19904.
+#> 7 HR_trt           0.743  7.38e-1 0.0826 0.0827  6.16e-1    0.887  1.00   16356.
 #> # ℹ 1 more variable: ess_tail <dbl>
 ```
 
@@ -595,15 +594,15 @@ The $95\%$ credible interval can be calculated as follows.
 ```r
 summarize_draws(draws2, ~ quantile(.x, probs = c(0.025, 0.975)))
 #> # A tibble: 7 × 3
-#>   variable                                `2.5%`  `97.5%`
-#>   <chr>                                    <dbl>    <dbl>
-#> 1 lp__                               -700.       -694.   
-#> 2 treatment log HR                     -0.254       0.203
-#> 3 Weibull shape parameter               0.757       0.884
-#> 4 commensurability parameter            0.000142    0.617
-#> 5 baseline log hazard rate, internal   -0.981      -0.582
-#> 6 baseline log hazard rate, external    1.46        2.74 
-#> 7 treatment HR                          0.776       1.22
+#>   variable                                `2.5%`   `97.5%`
+#>   <chr>                                    <dbl>     <dbl>
+#> 1 lp__                               -712.       -705.    
+#> 2 treatment log HR                     -0.517      -0.0851
+#> 3 Weibull shape parameter               0.774       0.900 
+#> 4 commensurability parameter            0.000151    0.929 
+#> 5 baseline log hazard rate, internal   -0.694      -0.330 
+#> 6 baseline log hazard rate, external    1.17        2.65  
+#> 7 treatment HR                          0.596       0.918
 ```
 
 We can see other plots that help us evaluate convergence and diagnose problems with the MCMC sampler, such as trace plot.
@@ -804,7 +803,7 @@ model1 <- jags(data = d.jags, model.file = "powerprior.txt", inits = i.jags, n.c
 #> Graph information:
 #>    Observed stochastic nodes: 1100
 #>    Unobserved stochastic nodes: 2
-#>    Total graph size: 23016
+#>    Total graph size: 17432
 #> 
 #> Initializing model
 ```
@@ -814,13 +813,13 @@ The summary can be produced using the following command.
 ```r
 model1$BUGSoutput$summary
 #>                   mean         sd          2.5%           25%           50%
-#> alpha     7.672650e-01 0.08330851  6.030597e-01  7.109502e-01  7.679483e-01
-#> beta     -8.006893e-01 0.05042475 -8.986307e-01 -8.356531e-01 -8.005683e-01
-#> deviance  2.200010e+08 1.86370178  2.200009e+08  2.200010e+08  2.200010e+08
+#> alpha    -5.566809e-01 0.08954522 -7.394070e-01 -6.170039e-01 -5.543440e-01
+#> beta     -4.200419e-01 0.10776354 -6.340181e-01 -4.921314e-01 -4.202084e-01
+#> deviance  2.200015e+08 1.99156129  2.200015e+08  2.200015e+08  2.200015e+08
 #>                    75%         97.5%     Rhat n.eff
-#> alpha     8.249207e-01  9.219494e-01 1.000049  1500
-#> beta     -7.651435e-01 -7.026286e-01 1.000307  1500
-#> deviance  2.200010e+08  2.200010e+08 1.000000     1
+#> alpha    -4.952955e-01 -3.884554e-01 1.000476  1500
+#> beta     -3.479730e-01 -2.076608e-01 1.000497  1500
+#> deviance  2.200015e+08  2.200015e+08 1.000000     1
 ```
 
 The summary of the hazard ratio for treatment variable is shown below.
@@ -829,7 +828,7 @@ The summary of the hazard ratio for treatment variable is shown below.
 c(summary(exp(model1$BUGSoutput$sims.list$beta[,1])),
   quantile(exp(model1$BUGSoutput$sims.list$beta[,1]),probs=c(0.025,0.975)))
 #>      Min.   1st Qu.    Median      Mean   3rd Qu.      Max.      2.5%     97.5% 
-#> 0.3871170 0.4335912 0.4490737 0.4495901 0.4652671 0.5259439 0.4071268 0.4952818
+#> 0.4931593 0.6113220 0.6569099 0.6608469 0.7061179 0.9601307 0.5304561 0.8124826
 ```
 The histogram of the treatment hazard ratio can also be produced.
 
@@ -1044,7 +1043,7 @@ model2 <- jags(data = d.jags, model.file = "commensurateprior.txt", inits = i.ja
 #> Graph information:
 #>    Observed stochastic nodes: 1100
 #>    Unobserved stochastic nodes: 5
-#>    Total graph size: 24222
+#>    Total graph size: 18642
 #> 
 #> Initializing model
 ```
@@ -1054,17 +1053,17 @@ The summary can be produced using the following command.
 ```r
 model2$BUGSoutput$summary
 #>                   mean         sd          2.5%           25%           50%
-#> alpha     7.012442e-01 0.08417559  5.422684e-01  6.433417e-01  6.995345e-01
-#> alphaR    3.775493e+00 0.53271370  2.651884e+00  3.434386e+00  3.808735e+00
-#> beta     -7.699118e-01 0.04937989 -8.653964e-01 -8.023713e-01 -7.688038e-01
-#> deviance  2.200009e+08 3.59110530  2.200009e+08  2.200009e+08  2.200009e+08
-#> tau       4.990748e-02 0.19141621  2.688540e-04  3.312027e-03  1.147687e-02
+#> alpha    -6.191206e-01 0.08842641 -7.909870e-01 -6.787401e-01 -6.193462e-01
+#> alphaR    2.366979e+00 0.36366809  1.593958e+00  2.144550e+00  2.379864e+00
+#> beta     -3.596931e-01 0.10541071 -5.626927e-01 -4.319852e-01 -3.571647e-01
+#> deviance  2.200014e+08 2.44607662  2.200014e+08  2.200014e+08  2.200014e+08
+#> tau       1.254783e-01 0.18316338  4.693678e-04  1.536327e-02  5.811439e-02
 #>                    75%         97.5%     Rhat n.eff
-#> alpha     7.626370e-01  8.639186e-01 1.002131   940
-#> alphaR    4.142427e+00  4.781330e+00 1.002836   840
-#> beta     -7.368342e-01 -6.755448e-01 1.000972  1500
-#> deviance  2.200009e+08  2.200009e+08 1.000000     1
-#> tau       3.066659e-02  2.970125e-01 1.001709  1200
+#> alpha    -5.575406e-01 -4.477827e-01 1.001772  1100
+#> alphaR    2.627147e+00  3.007402e+00 1.004616   440
+#> beta     -2.884953e-01 -1.600480e-01 1.000624  1500
+#> deviance  2.200014e+08  2.200014e+08 1.000000     1
+#> tau       1.585465e-01  6.215560e-01 1.001367  1500
 ```
 
 The summary of the hazard ratio for treatment variable is shown below.
@@ -1073,7 +1072,7 @@ The summary of the hazard ratio for treatment variable is shown below.
 c(summary(exp(model2$BUGSoutput$sims.list$beta[,1])),
   quantile(exp(model2$BUGSoutput$sims.list$beta[,1]),probs=c(0.025,0.975)))
 #>      Min.   1st Qu.    Median      Mean   3rd Qu.      Max.      2.5%     97.5% 
-#> 0.3924743 0.4482647 0.4635673 0.4636176 0.4786268 0.5455878 0.4208848 0.5088791
+#> 0.4932769 0.6492190 0.6996573 0.7017649 0.7493903 0.9788045 0.5696732 0.8521031
 ```
 The histogram of the treatment hazard ratio can also be produced.
 
@@ -1212,14 +1211,13 @@ results.no.psborrow<- mcmc_sample(anls_obj,
 )
 #> Running MCMC with 3 sequential chains...
 #> 
-
-#> Chain 1 finished in 4.1 seconds.
-#> Chain 2 finished in 4.1 seconds.
-#> Chain 3 finished in 4.0 seconds.
+#> Chain 1 finished in 4.0 seconds.
+#> Chain 2 finished in 4.0 seconds.
+#> Chain 3 finished in 4.4 seconds.
 #> 
 #> All 3 chains finished successfully.
 #> Mean chain execution time: 4.1 seconds.
-#> Total execution time: 12.6 seconds.
+#> Total execution time: 12.7 seconds.
 
 draws3 <- results.no.psborrow$draws()
 draws3 <- rename_draws_covariates(draws3, anls_obj)
@@ -1230,12 +1228,12 @@ The summary is shown below.
 ```r
 results.no.psborrow$summary()
 #> # A tibble: 4 × 10
-#>   variable      mean    median     sd    mad       q5      q95  rhat ess_bulk
-#>   <chr>        <dbl>     <dbl>  <dbl>  <dbl>    <dbl>    <dbl> <dbl>    <dbl>
-#> 1 lp__     -724.     -724.     0.995  0.718  -726.    -723.     1.00   10028.
-#> 2 beta_trt   -0.0343   -0.0352 0.117  0.116    -0.224    0.159  1.00    7950.
-#> 3 alpha      -0.948    -0.947  0.0989 0.0989   -1.11    -0.787  1.00    7991.
-#> 4 HR_trt      0.973     0.965  0.114  0.112     0.799    1.17   1.00    7950.
+#>   variable     mean   median     sd    mad       q5      q95  rhat ess_bulk
+#>   <chr>       <dbl>    <dbl>  <dbl>  <dbl>    <dbl>    <dbl> <dbl>    <dbl>
+#> 1 lp__     -727.    -727.    0.982  0.694  -729.    -726.     1.00   10388.
+#> 2 beta_trt   -0.355   -0.355 0.109  0.108    -0.533   -0.178  1.00    9046.
+#> 3 alpha      -0.623   -0.622 0.0906 0.0905   -0.775   -0.476  1.00    9092.
+#> 4 HR_trt      0.705    0.701 0.0769 0.0761    0.587    0.837  1.00    9046.
 #> # ℹ 1 more variable: ess_tail <dbl>
 ```
 
@@ -1262,10 +1260,10 @@ summarize_draws(draws3, ~ quantile(.x, probs = c(0.025, 0.975)))
 #> # A tibble: 4 × 3
 #>   variable                   `2.5%`  `97.5%`
 #>   <chr>                       <dbl>    <dbl>
-#> 1 lp__                     -727.    -723.   
-#> 2 treatment log HR           -0.264    0.195
-#> 3 baseline log hazard rate   -1.14    -0.757
-#> 4 treatment HR                0.768    1.22
+#> 1 lp__                     -730.    -726.   
+#> 2 treatment log HR           -0.568   -0.141
+#> 3 baseline log hazard rate   -0.804   -0.451
+#> 4 treatment HR                0.567    0.869
 ```
 
 We can see other plots that help us understand and diagnose problems with the MCMC sampler, such as trace plot.
@@ -1376,13 +1374,13 @@ results.full.psborrow<- mcmc_sample(anls_obj,
 )
 #> Running MCMC with 3 sequential chains...
 #> 
-#> Chain 1 finished in 5.7 seconds.
-#> Chain 2 finished in 5.6 seconds.
-#> Chain 3 finished in 5.6 seconds.
+#> Chain 1 finished in 5.5 seconds.
+#> Chain 2 finished in 4.9 seconds.
+#> Chain 3 finished in 4.7 seconds.
 #> 
 #> All 3 chains finished successfully.
-#> Mean chain execution time: 5.7 seconds.
-#> Total execution time: 17.4 seconds.
+#> Mean chain execution time: 5.0 seconds.
+#> Total execution time: 15.5 seconds.
 
 draws4 <- results.full.psborrow$draws()
 draws4 <- rename_draws_covariates(draws4, anls_obj)
@@ -1395,10 +1393,10 @@ results.full.psborrow$summary()
 #> # A tibble: 4 × 10
 #>   variable     mean   median     sd    mad       q5      q95  rhat ess_bulk
 #>   <chr>       <dbl>    <dbl>  <dbl>  <dbl>    <dbl>    <dbl> <dbl>    <dbl>
-#> 1 lp__     -815.    -814.    1.01   0.710  -817.    -814.     1.00   14094.
-#> 2 beta_trt   -1.32    -1.32  0.0781 0.0775   -1.45    -1.19   1.00   11317.
-#> 3 alpha       0.339    0.339 0.0476 0.0480    0.260    0.416  1.00   11709.
-#> 4 HR_trt      0.268    0.267 0.0209 0.0207    0.235    0.303  1.00   11317.
+#> 1 lp__     -747.    -747.    0.994  0.716  -749.    -746.     1.00   14116.
+#> 2 beta_trt   -1.51    -1.51  0.0768 0.0773   -1.64    -1.39   1.00   12217.
+#> 3 alpha       0.534    0.535 0.0468 0.0467    0.456    0.611  1.00   12320.
+#> 4 HR_trt      0.221    0.220 0.0170 0.0170    0.194    0.250  1.00   12217.
 #> # ℹ 1 more variable: ess_tail <dbl>
 ```
 
@@ -1425,10 +1423,10 @@ summarize_draws(draws4, ~ quantile(.x, probs = c(0.025, 0.975)))
 #> # A tibble: 4 × 3
 #>   variable                   `2.5%`  `97.5%`
 #>   <chr>                       <dbl>    <dbl>
-#> 1 lp__                     -817.    -814.   
-#> 2 treatment log HR           -1.47    -1.17 
-#> 3 baseline log hazard rate    0.245    0.430
-#> 4 treatment HR                0.229    0.311
+#> 1 lp__                     -750.    -746.   
+#> 2 treatment log HR           -1.67    -1.36 
+#> 3 baseline log hazard rate    0.442    0.625
+#> 4 treatment HR                0.189    0.256
 ```
 
 We can see other plots that help us understand and diagnose problems with the MCMC sampler, such as trace plot.
@@ -1461,18 +1459,20 @@ summary(f1)
 #> coxph(formula = Surv(time, event) ~ group, data = data_with_weights[data_with_weights$ext == 
 #>     0, ])
 #> 
-#>   n= 600, number of events= 367 
+#>   n= 600, number of events= 389 
 #> 
-#>           coef exp(coef) se(coef)      z Pr(>|z|)
-#> group -0.02944   0.97099  0.11673 -0.252    0.801
+#>          coef exp(coef) se(coef)      z Pr(>|z|)  
+#> group -0.2540    0.7757   0.1105 -2.298   0.0216 *
+#> ---
+#> Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 #> 
 #>       exp(coef) exp(-coef) lower .95 upper .95
-#> group     0.971       1.03    0.7724     1.221
+#> group    0.7757      1.289    0.6246    0.9633
 #> 
-#> Concordance= 0.512  (se = 0.014 )
-#> Likelihood ratio test= 0.06  on 1 df,   p=0.8
-#> Wald test            = 0.06  on 1 df,   p=0.8
-#> Score (logrank) test = 0.06  on 1 df,   p=0.8
+#> Concordance= 0.527  (se = 0.013 )
+#> Likelihood ratio test= 5.1  on 1 df,   p=0.02
+#> Wald test            = 5.28  on 1 df,   p=0.02
+#> Score (logrank) test = 5.31  on 1 df,   p=0.02
 ```
 
 # Cox proportional hazards model using frequentist approach (Full borrowing from external control)
@@ -1485,20 +1485,20 @@ summary(f2)
 #> Call:
 #> coxph(formula = Surv(time, event) ~ group, data = data_with_weights)
 #> 
-#>   n= 1100, number of events= 703 
+#>   n= 1100, number of events= 727 
 #> 
 #>           coef exp(coef) se(coef)      z Pr(>|z|)    
-#> group -0.98910   0.37191  0.08018 -12.34   <2e-16 ***
+#> group -1.10052   0.33270  0.07978 -13.79   <2e-16 ***
 #> ---
 #> Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 #> 
 #>       exp(coef) exp(-coef) lower .95 upper .95
-#> group    0.3719      2.689    0.3178    0.4352
+#> group    0.3327      3.006    0.2845     0.389
 #> 
-#> Concordance= 0.662  (se = 0.007 )
-#> Likelihood ratio test= 158.1  on 1 df,   p=<2e-16
-#> Wald test            = 152.2  on 1 df,   p=<2e-16
-#> Score (logrank) test = 162.7  on 1 df,   p=<2e-16
+#> Concordance= 0.664  (se = 0.007 )
+#> Likelihood ratio test= 198.5  on 1 df,   p=<2e-16
+#> Wald test            = 190.3  on 1 df,   p=<2e-16
+#> Score (logrank) test = 205.9  on 1 df,   p=<2e-16
 ```
 
 
@@ -1561,51 +1561,51 @@ The hazard ratio estimates and $95\%$ credible intervals for all the methods are
 <tbody>
   <tr>
    <td style="text-align:left;"> Exponential distribution (constant hazard) and gamma prior </td>
-   <td style="text-align:right;"> 0.9703 </td>
-   <td style="text-align:right;"> 0.7665 </td>
-   <td style="text-align:right;"> 1.2148 </td>
+   <td style="text-align:right;"> 0.7026 </td>
+   <td style="text-align:right;"> 0.5645 </td>
+   <td style="text-align:right;"> 0.8689 </td>
   </tr>
   <tr>
    <td style="text-align:left;"> Piecewise exponential distribution (proportional hazard) and power prior </td>
-   <td style="text-align:right;"> 0.4496 </td>
-   <td style="text-align:right;"> 0.4071 </td>
-   <td style="text-align:right;"> 0.4953 </td>
+   <td style="text-align:right;"> 0.6608 </td>
+   <td style="text-align:right;"> 0.5305 </td>
+   <td style="text-align:right;"> 0.8125 </td>
   </tr>
   <tr>
    <td style="text-align:left;"> Weibull distribution (proportional hazard) and gamma prior </td>
-   <td style="text-align:right;"> 0.9787 </td>
-   <td style="text-align:right;"> 0.7756 </td>
-   <td style="text-align:right;"> 1.2249 </td>
+   <td style="text-align:right;"> 0.7428 </td>
+   <td style="text-align:right;"> 0.5961 </td>
+   <td style="text-align:right;"> 0.9184 </td>
   </tr>
   <tr>
    <td style="text-align:left;"> Piecewise exponential distribution (proportional hazard) and commensurate prior </td>
-   <td style="text-align:right;"> 0.4636 </td>
-   <td style="text-align:right;"> 0.4209 </td>
-   <td style="text-align:right;"> 0.5089 </td>
+   <td style="text-align:right;"> 0.7018 </td>
+   <td style="text-align:right;"> 0.5697 </td>
+   <td style="text-align:right;"> 0.8521 </td>
   </tr>
   <tr>
    <td style="text-align:left;"> Exponential distribution (constant hazard): No borrowing </td>
-   <td style="text-align:right;"> 0.9729 </td>
-   <td style="text-align:right;"> 0.7682 </td>
-   <td style="text-align:right;"> 1.2156 </td>
+   <td style="text-align:right;"> 0.7052 </td>
+   <td style="text-align:right;"> 0.5667 </td>
+   <td style="text-align:right;"> 0.8687 </td>
   </tr>
   <tr>
    <td style="text-align:left;"> Exponential distribution (constant hazard): Full borrowing </td>
-   <td style="text-align:right;"> 0.2678 </td>
-   <td style="text-align:right;"> 0.2290 </td>
-   <td style="text-align:right;"> 0.3110 </td>
+   <td style="text-align:right;"> 0.2209 </td>
+   <td style="text-align:right;"> 0.1892 </td>
+   <td style="text-align:right;"> 0.2556 </td>
   </tr>
   <tr>
    <td style="text-align:left;"> Cox model (Frequentist approach): No borrowing </td>
-   <td style="text-align:right;"> 0.9710 </td>
-   <td style="text-align:right;"> 0.7724 </td>
-   <td style="text-align:right;"> 1.2206 </td>
+   <td style="text-align:right;"> 0.7757 </td>
+   <td style="text-align:right;"> 0.6246 </td>
+   <td style="text-align:right;"> 0.9633 </td>
   </tr>
   <tr>
    <td style="text-align:left;"> Cox model (Frequentist approach): Full borrowing </td>
-   <td style="text-align:right;"> 0.3719 </td>
-   <td style="text-align:right;"> 0.3178 </td>
-   <td style="text-align:right;"> 0.4352 </td>
+   <td style="text-align:right;"> 0.3327 </td>
+   <td style="text-align:right;"> 0.2845 </td>
+   <td style="text-align:right;"> 0.3890 </td>
   </tr>
 </tbody>
 <tfoot>
